Java8 version.