@@ -3,9 +3,7 @@ public class Button implements Component {
     private final String template;
 
     public Button(String caption) {
-        template = """
-                <input type=text> %s </input>
-                """.formatted(caption);
+        template = String.format("<input type=text> %s </input>", caption);
     }
 
     @Override
