@@ -3,9 +3,7 @@ public class H1 implements Component {
     private final String template;
 
     public H1(String caption) {
-        template = """
-                <h1> %s </h1>
-                """.formatted(caption);
+        template = String.format("<h1> %s </h1>", caption);
     }
 
     @Override
